<?xml version="1.0"?>
<package>
  <name>kurt_base</name>
  <version>0.1.0</version>
  <description>
    Driver for KURT mobile robot bases and for their laser rotation units.
  </description>

  <author email="kurt-driver@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <maintainer email="kurt-driver@jochen.sprickerhof.de">Jochen Sprickerhof</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/kurt_base</url>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
