<?xml version="1.0"?>
<package>
  <name>kurt_description</name>
  <version>0.1.0</version>
  <description>
    This package contains URDF descriptions of the KURT robots. The complete
    robots are available in the directory "robots/". Each robot consists of
    a base and a top (see those two directories). Usually, a top is made up
    from several parts, such as a laser scanner.
  </description>

  <author email="mguenthe@uni-osnabrueck.de">Martin Günther</author>
  <author email="jochen@sprickerhof.de">Jochen Sprickerhof</author>
  <maintainer email="jochen@sprickerhof.de">Jochen Sprickerhof</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/kurt_description</url>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>diffdrive_gazebo_plugin</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>diffdrive_gazebo_plugin</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
